# hdlConvertor

./: .appveyor.yml  .cproject  .dockerignore  .gitattributes  .gitignore  .gitmodules  .project  .travis.yml  CMakeLists.txt  Dockerfile  LICENSE  MANIFEST  MANIFEST.in  README.md  Verilog2001.g4  Windows Instillation and Build Help  generateGram.sh  meson.build  meson.options  pyproject.toml  requirements.txt  setup.py  sv2012.g4  test.py  updateAntlr.sh  vhdl.g4
hdlConvertor/: CMakeLists.txt  __init__.py  _hdlConvertor.pyx  hdlAst.py  language.py  meson.build  parse_hdlConvertor_json.py  py_ver_compatibility.py  python_ver_independent_str.pyx  toFIrrtl.py  toHdlUtils.py  toPy.cpp  toPy.h  toPy_expr.cpp  toPy_statements.cpp  toPy_type.cpp  toVerilog.py  toVhdl.py  verilogPreproc.pyx
hdlConvertor/hdlAst/: __init__.py  _bases.py  _defs.py  _expr.py  _statements.py  _structural.py  _typeDefs.py  utils.py
hdlConvertor/to/: common.py  const_cache.py  hdlUtils.py  hdl_ast_visitor.py  json.py  json_debug.py
hdlConvertor/translate/: verilog_to_basic_hdl_sim_model.py  verilog_to_hwt.py  vhdl_to_verilog.py
src/: CMakeLists.txt  CMake_antlr4.txt  CMake_coverage.txt  __init__.py  _hdlConvertor.pyx  conversion_exception.cpp  conversion_exception.h  convertor.cpp  convertor.h  convertor.pxd  debugConfig.h  encodingConversions.cpp  exception.cpp  exception.h  hdlAst.py  hdlConvertor.cpp  hdlConvertor.pyx  hdlConvertorModule.cpp  hdlConvertorModule.h  hdlConvertorToken.cpp  hdlConvertorTokenFactory.cpp  language.h  language.py  langue.h  main.cpp  meson.build  notImplementedLogger.cpp  notImplementedLogger.h  parserContainer.h  syntaxErrorLogger.cpp  syntaxErrorLogger.h  toHdlUtils.py  toJson.cpp  toJson.h  toPy.cpp  toPy.h  toString.cpp  toString.h  toVerilog.py  universal_fs.cpp
src/SVParser/: sv2012BaseVisitor.cpp  sv2012BaseVisitor.h  sv2012Lexer.cpp  sv2012Lexer.h  sv2012Lexer.tokens  sv2012Parser.cpp  sv2012Parser.h  sv2012Visitor.cpp  sv2012Visitor.h
src/VerilogParser/: Verilog2001BaseListener.cpp  Verilog2001BaseListener.h  Verilog2001BaseVisitor.cpp  Verilog2001BaseVisitor.h  Verilog2001Lexer.cpp  Verilog2001Lexer.h  Verilog2001Lexer.tokens  Verilog2001Listener.cpp  Verilog2001Listener.h  Verilog2001Parser.cpp  Verilog2001Parser.h  Verilog2001Visitor.cpp  Verilog2001Visitor.h
src/VhdlParser/: vhdl.tokens  vhdlBaseListener.cpp  vhdlBaseListener.h  vhdlBaseVisitor.cpp  vhdlBaseVisitor.h  vhdlLexer.cpp  vhdlLexer.h  vhdlLexer.tokens  vhdlListener.cpp  vhdlListener.h  vhdlParser.cpp  vhdlParser.h  vhdlVisitor.cpp  vhdlVisitor.h
src/baseHdlParser/: baseHdlParser.cpp  baseHdlParser.h  commentParser.h
src/hdlAst/: bigInteger.cpp  codePosition.cpp  hdlCompInst.cpp  hdlContext.cpp  hdlFunctionDef.cpp  hdlIdDef.cpp  hdlLibrary.cpp  hdlModuleDec.cpp  hdlModuleDef.cpp  hdlNamespace.cpp  hdlOp.cpp  hdlOpType.cpp  hdlStmAssign.cpp  hdlStmBlock.cpp  hdlStmCase.cpp  hdlStmExpr.cpp  hdlStmFor.cpp  hdlStmIf.cpp  hdlStmProcess.cpp  hdlStmWhile.cpp  hdlStm_others.cpp  hdlTypes.cpp  hdlValue.cpp  hdlVariableDef.cpp  iHdlExpr.cpp  iHdlObj.cpp  iHdlStatement.cpp  named.cpp
src/hdlObjects/: aPackage.cpp  aPackage.h  arch.cpp  arch.h  bigInteger.cpp  bigInteger.h  codePosition.cpp  compInstance.cpp  compInstance.h  context.cpp  context.h  direction.h  entity.cpp  entity.h  expr.cpp  expr.h  exprItem.h  function.cpp  function.h  generate.cpp  generate.h  hdlCall.cpp  hdlCompInstance.cpp  hdlContext.cpp  hdlFunction.cpp  hdlFunctionDef.cpp  hdlLibrary.cpp  hdlModuleDec.cpp  hdlModuleDef.cpp  hdlNamespace.cpp  hdlOperatorType.cpp  hdlStmAssign.cpp  hdlStmBlock.cpp  hdlStmCase.cpp  hdlStmExpr.cpp  hdlStmFor.cpp  hdlStmIf.cpp  hdlStmProcess.cpp  hdlStmWhile.cpp  hdlStm_others.cpp  (+32 more)
src/svConverter/: CMakeLists.txt  library_textParser.cpp  library_textParser.h  source_textParser.cpp  source_textParser.h
src/svConvertor/: CMakeLists.txt  attributeParser.cpp  baseSvParser.cpp  commentParser.cpp  declrParser.cpp  delayParser.cpp  eventExprParser.cpp  exprParser.cpp  exprPrimaryParser.cpp  gateParser.cpp  generateParser.cpp  library_textParser.cpp  literalParser.cpp  moduleInstanceParser.cpp  moduleParamParser.cpp  moduleParser.cpp  paramDefParser.cpp  portParser.cpp  positionAwareParser.cpp  programParser.cpp  source_textParser.cpp  statementParser.cpp  typeParser.cpp  utils.cpp
src/vPreprocessor/: macroPrototype.cpp  macroPrototype.h  macroSymbol.cpp  macro_replace.h  symbol.cpp  symbol.h  vPreprocessor.cpp
src/verilogConvertor/: CMakeLists.txt  attributeParser.cpp  attributeParser.h  commentParser.cpp  commentParser.h  exprParser.cpp  exprParser.h  literalParser.cpp  literalParser.h  moduleInstanceParser.cpp  moduleInstanceParser.h  moduleParamParser.cpp  moduleParamParser.h  moduleParser.cpp  moduleParser.h  portParser.cpp  portParser.h  source_textParser.cpp  source_textParser.h  statementParser.cpp  statementParser.h  utils.cpp  utils.h
src/verilogPreproc/: CMakeLists.txt  a_macro_def.cpp  default_macro_defs.cpp  file_line_map.cpp  macroDB.cpp  macroPrototype.cpp  macroPrototype.h  macroSymbol.cpp  macroSymbol.h  macro_def.cpp  macro_def_verilog.cpp  macro_replace.cpp  macro_replace.h  macro_replace_sv.cpp  macro_replace_sv.h  out_buffer.cpp  str_utils.cpp  symbol.cpp  symbol.h  vPreprocessor.cpp  vPreprocessor.h  verilogPreproc.cpp  verilogPreprocContainer.cpp
src/vhdlConvertor/: CMakeLists.txt  aliasParser.cpp  archParser.cpp  archParser.h  baseVhdlParser.cpp  blockDeclarationParser.cpp  blockDeclarationParser.h  blockParser.cpp  commentParser.cpp  compInstanceParser.cpp  compInstanceParser.h  constantParser.cpp  constantParser.h  designFileParser.cpp  designFileParser.h  directionParser.cpp  directionParser.h  entityParser.cpp  entityParser.h  exprParser.cpp  exprParser.h  generateStatementParser.cpp  generateStatementParser.h  interfaceParser.cpp  interfaceParser.h  literalParser.cpp  literalParser.h  operatoTypeParser.h  operatorTypeParser.cpp  packageHeaderParser.cpp  packageHeaderParser.h  packageParser.cpp  packageParser.h  processParser.cpp  processParser.h  referenceParser.cpp  (+16 more)
(+943 files in other folders)
